Fix text alignment issues between TH and TD cells in datagrids.
When using a datagrid that consists of both TH and TD cells in a row,
content alignment would begin to fail. This is due to some inherited
browser styles for vertical alignment on TH, and different padding
definitions between TH and TD.

We now set the alignment and padding on both of these at the same time,
ensuring they line up.

Testing Done:
Tested all the typical datagrids in Review Board, plus the admin UI
datagrids, ensuring that alignment was always correct.

Reviewed at https://reviews.reviewboard.org/r/13921/

--- a/djblets/static/djblets/css/datagrid.less
+++ b/djblets/static/djblets/css/datagrid.less
@@ -127,10 +127,14 @@
     }
   }
 
-  td {
+  td,
+  th {
     line-height: @_cell-vars[@height];
-    padding: @_cell-vars[@padding];
+    padding: var(--ink-c-data-table-cell-padding);
+    vertical-align: inherit;
+  }
 
+  td {
     &.has-link > a {
       /*
        * Ensure the link takes the full width of the cell. Ideally it would
@@ -144,11 +148,6 @@
       color: inherit;
       text-decoration: none;
     }
-  }
-
-  td,
-  .datagrid-header {
-    padding: var(--ink-c-data-table-cell-padding);
   }
 
   th.day {
@@ -168,7 +167,7 @@
   color: var(--ink-c-data-table-header-fg);
   cursor: pointer;
   font-weight: bold;
-  padding: @_header-vars[@padding];
+  padding: var(--ink-c-data-table-cell-padding);
   text-align: left;
   white-space: nowrap;
 
